# Dungeon-of-Choice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
asset_src/: baddy.xcf  battle.xcf  boots.xcf  dagger.xcf  gameover.xcf  hallway.blend  heal.xcf  heart.xcf  junction.blend  lamp.xcf  mimic.xcf  player.xcf  title.xcf  treasure.blend
asset_src/music/: ambiance.mmpz
assets/shaders/: fragment.glsl  vertex.glsl
src/: main.cpp  util.hpp
